# latent_crowd_mpc

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: default.yaml
docx/: AI科研Git工作流模板.md
src/latent_crowd_mpc/: __init__.py
tests/: test_import.py
